--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,4 +37,15 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp" />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:layout_marginTop="45dp"
+        android:minHeight="200dp"
+        android:minWidth="200dp"
+        android:layout_below="@+id/button"
+        android:layout_alignLeft="@+id/input"
+        android:layout_alignStart="@+id/input" />
+
 </RelativeLayout>
